Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60150

WebView does not receive active focus on forceActiveFocus() call

XMLWordPrintable

      This came out of https://bugreports.qt.io/browse/QTBUG-58228
      See attached example.
      On platforms where QtWebView uses QtWebEngine as a backend, after WebView::forceActiveFocus() call, Window::activeFocusItem becomes QQuickWebView and it should be QtWebEngineCore::RenderWidgetHostViewQtDelegateQuick as after a single click on WebView.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            wearyinside Oleg Yadrov
            wearyinside Oleg Yadrov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes