Make WebView receive active focus on forceActiveFocus() call

This logic was simply missed.

Task-number: QTBUG-60150
Change-Id: Id2e744a524823ca25b3ab42b76c8729c22e817b9
Reviewed-by: Robin Burchell <robin.burchell@crimson.no>
Reviewed-by: Christian Stromme <christian.stromme@qt.io>